# rocketchat_API

./: pyproject.toml
.github/workflows/: build.yml  lint.yml
rocketchat_API/: rocketchat.py
rocketchat_API/APISections/: assets.py  base.py  channels.py  chat.py  groups.py  im.py  integrations.py  licenses.py  livechat.py  roles.py  rooms.py  settings.py  subscriptions.py  teams.py  users.py  video_conferences.py
